--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Птички</title>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="google-site-verification" content="iqo0n3zxQoGubScz5JL0TBBW2voN6m5t0uhukwDrYLQ" />
     </head>
     <body>
         <header>
